--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/react-router-dom": "^4.3.4",
         "@types/react-share": "^2.1.1",
         "@types/react-youtube": "^7.6.2",
+        "@types/three": "^0.103.2",
         "autoprefixer": "^9.6.1",
         "babel-loader": "^8.0.6",
         "babel-plugin-transform-class-properties": "^6.24.1",
@@ -61,12 +62,15 @@
         "react-youtube": "^7.9.0",
         "redux": "^4.0.4",
         "style-loader": "^0.23.1",
+        "three": "^0.107.0",
+        "three-orbitcontrols": "^2.102.2",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.3",
         "web-animations-js": "^2.3.2",
         "webpack": "^4.38.0",
         "webpack-cli": "^3.3.6",
-        "webpack-dev-server": "^3.7.2"
+        "webpack-dev-server": "^3.7.2",
+        "webvr-polyfill": "^0.10.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.21",
