--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "copy-webpack-plugin": "^5.0.3",
         "css-loader": "^3.1.0",
         "fs": "0.0.1-security",
+        "gh-pages": "^2.1.1",
         "googleapis": "^42.0.0",
         "hammerjs": "^2.0.8",
         "html-webpack-plugin": "^3.2.0",
@@ -64,12 +65,15 @@
         "style-loader": "^0.23.1",
         "three": "^0.107.0",
         "three-orbitcontrols": "^2.102.2",
+        "three-vrcontrols-module": "^2.2.1",
+        "three-vreffect-module": "^2.2.0",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.3",
         "web-animations-js": "^2.3.2",
         "webpack": "^4.38.0",
         "webpack-cli": "^3.3.6",
         "webpack-dev-server": "^3.7.2",
+        "webvr-boilerplate": "^0.5.0",
         "webvr-polyfill": "^0.10.10"
     },
     "dependencies": {
