--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/preset-typescript": "^7.3.3",
         "@babel/runtime": "^7.5.5",
         "@types/chai": "^4.1.7",
+        "@types/dat.gui": "^0.7.4",
         "@types/gapi": "0.0.39",
         "@types/lodash": "^4.14.137",
         "@types/mathjs": "^6.0.0",
@@ -41,6 +42,8 @@
         "chai": "^4.2.0",
         "copy-webpack-plugin": "^5.0.3",
         "css-loader": "^3.1.0",
+        "dat.gui": "^0.7.6",
+        "datguivr": "^0.1.6",
         "fs": "0.0.1-security",
         "gh-pages": "^2.1.1",
         "googleapis": "^42.0.0",
