--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@babel/runtime": "^7.5.5",
+        "@types/aframe": "^0.8.3",
         "@types/chai": "^4.1.7",
         "@types/dat.gui": "^0.7.4",
         "@types/gapi": "0.0.39",
@@ -34,6 +35,13 @@
         "@types/react-share": "^2.1.1",
         "@types/react-youtube": "^7.6.2",
         "@types/three": "^0.103.2",
+        "aframe": "^0.9.2",
+        "aframe-animation-component": "^5.1.2",
+        "aframe-html-shader": "^0.2.0",
+        "aframe-particle-system-component": "^1.1.3",
+        "aframe-physics-components": "^1.1.0",
+        "aframe-physics-system": "^4.0.1",
+        "aframe-react": "^4.4.0",
         "autoprefixer": "^9.6.1",
         "babel-loader": "^8.0.6",
         "babel-plugin-transform-class-properties": "^6.24.1",
@@ -77,7 +85,8 @@
         "webpack-cli": "^3.3.6",
         "webpack-dev-server": "^3.7.2",
         "webvr-boilerplate": "^0.5.0",
-        "webvr-polyfill": "^0.10.10"
+        "webvr-polyfill": "^0.10.10",
+        "youtube-dl": "^2.0.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.21",
