--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,15 @@
         "@types/youtube-dl": "^1.12.2",
         "cors": "^2.8.5",
         "nedb": "^1.8.0",
+        "node-media-server": "^2.1.3",
         "typescript": "^3.6.2",
         "youtube-dl": "^2.0.1"
     },
     "dependencies": {
         "@types/node": "^12.7.4",
         "express": "^4.17.1"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@TakenokoTech"
     }
 }
