--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "react-toggle-component": "^2.0.11",
         "react-youtube": "^7.9.0",
         "redux": "^4.0.4",
+        "shaka-player": "^2.5.5",
         "style-loader": "^0.23.1",
         "three": "^0.107.0",
         "three-orbitcontrols": "^2.102.2",
@@ -81,6 +82,7 @@
         "ts-node": "^8.3.0",
         "typescript": "^3.5.3",
         "uuid": "^3.3.3",
+        "video.js": "^7.6.0",
         "web-animations-js": "^2.3.2",
         "webpack": "^4.38.0",
         "webpack-cli": "^3.3.6",
