--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/react-share": "^2.1.1",
         "@types/react-youtube": "^7.6.2",
         "@types/three": "^0.103.2",
+        "@types/video.js": "^7.2.14",
         "aframe": "^0.9.2",
         "aframe-animation-component": "^5.1.2",
         "aframe-html-shader": "^0.2.0",
@@ -43,6 +44,7 @@
         "aframe-physics-system": "^4.0.1",
         "aframe-react": "^4.4.0",
         "autoprefixer": "^9.6.1",
+        "axios": "^0.19.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-runtime": "^6.23.0",
