--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "@types/nedb": "^1.8.9",
         "@types/youtube-dl": "^1.12.2",
         "cors": "^2.8.5",
+        "log4js": "^5.1.0",
         "nedb": "^1.8.0",
         "node-media-server": "^2.1.3",
         "typescript": "^3.6.2",
